// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render DatasetInfo correctly 1`] = `
<React.Fragment>
  <ListRegular
    bottomMargin={true}
    title="Related datasets"
  >
    <div
      className="row list-regular--item"
      key="reference-http://referenced/dataset"
    >
      <div
        className="col-4 pl-0 fdk-text-strong"
      >
        http://www.w3.org/2002/07/hasVersion
      </div>
      <div
        className="col-8"
      >
        <LinkExternal
          prefLabel="http://referenced/dataset"
          uri=""
        />
      </div>
    </div>
  </ListRegular>
  <ListRegular
    bottomMargin={true}
    title="Restrictions"
  >
    <div
      className="row list-regular--item"
    >
      <div
        className="col-4 pl-0 fdk-text-strong"
      >
        Spatial
      </div>
      <div
        className="col-8"
      >
        <span
          key="0"
        >
          Asker
        </span>
        <span
          key="1"
        >
          , 
          Bærum
        </span>
        <span
          key="2"
        >
          , 
          Hurum
        </span>
        <span
          key="3"
        >
          , 
          Røyken
        </span>
      </div>
    </div>
  </ListRegular>
</React.Fragment>
`;

exports[`should render DatasetInfo correctly 2`] = `
<React.Fragment>
  <ListRegular
    bottomMargin={true}
    title="Related datasets"
  >
    <div
      className="row list-regular--item"
      key="reference-http://referenced/dataset"
    >
      <div
        className="col-4 pl-0 fdk-text-strong"
      >
        http://www.w3.org/2002/07/hasVersion
      </div>
      <div
        className="col-8"
      >
        <LinkExternal
          prefLabel="http://referenced/dataset"
          uri=""
        />
      </div>
    </div>
  </ListRegular>
  <ListRegular
    bottomMargin={true}
    title="Restrictions"
  >
    <div
      className="row list-regular--item"
    >
      <div
        className="col-4 pl-0 fdk-text-strong"
      >
        Spatial
      </div>
      <div
        className="col-8"
      >
        <span
          key="0"
        >
          Asker
        </span>
        <span
          key="1"
        >
          , 
          Bærum
        </span>
        <span
          key="2"
        >
          , 
          Hurum
        </span>
        <span
          key="3"
        >
          , 
          Røyken
        </span>
      </div>
    </div>
    <React.Fragment
      key="temporal-1483228800000"
    >
      <TwoColRow
        col1="From"
        col2={
          <t
            ago={false}
            calendar={false}
            decimal={false}
            element="time"
            filter={[Function]}
            format="DD.MM.YYYY"
            fromNow={false}
            interval={60000}
            onChange={[Function]}
            toNow={false}
            unit={null}
            unix={false}
            utc={false}
          >
            1483228800000
          </t>
        }
      />
      <TwoColRow
        col1="To"
        col2={
          <t
            ago={false}
            calendar={false}
            decimal={false}
            element="time"
            filter={[Function]}
            format="DD.MM.YYYY"
            fromNow={false}
            interval={60000}
            onChange={[Function]}
            toNow={false}
            unit={null}
            unix={false}
            utc={false}
          >
            1514764799000
          </t>
        }
      />
    </React.Fragment>
  </ListRegular>
</React.Fragment>
`;

exports[`should render DatasetInfo correctly with no props 1`] = `<React.Fragment />`;
